   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #996: Fix the "create" action to omit the repository label prefix from Borg's output when
   databases are enabled.
 * #998: Send the "encryption_passphrase" option to Borg via an anonymous pipe, which is more secure
   than using an environment variable.
 * #1001: For the ZFS, Btrfs, and LVM hooks, only make snapshots for root patterns that come from
   a borgmatic configuration option (e.g. "source_directories")—not from other hooks within
   borgmatic.
 * #1001: Fix a ZFS/LVM error due to colliding snapshot mount points for nested datasets or logical
   volumes.
 * #1001: Don't try to snapshot ZFS datasets that have the "canmount=off" property.
 * Fix another error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
   source directories.

1.9.10
 * #966: Add a "{credential ...}" syntax for loading systemd credentials into borgmatic
   configuration files. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #987: Fix a "list" action error when the "encryption_passcommand" option is set.
 * #987: When both "encryption_passcommand" and "encryption_passphrase" are configured, prefer
   "encryption_passphrase" even if it's an empty value.
 * #988: With the "max_duration" option or the "--max-duration" flag, run the archives and
   repository checks separately so they don't interfere with one another. Previously, borgmatic
   refused to run checks in this situation.
 * #989: Fix the log message code to avoid using Python 3.10+ logging features. Now borgmatic will
   work with Python 3.9 again.
 * Capture and delay any log records produced before logging is fully configured, so early log
   records don't get lost.
 * Add support for Python 3.13.

1.9.9
 * #635: Log the repository path or label on every relevant log message, not just some logs.